--- a/public/partials/list.html
+++ b/public/partials/list.html
@@ -15,23 +15,20 @@
 				    <div class="small-12 large-6 columns">
 				    	<label>Sort by Title or Rank
 					        <select  ng-model="sortOption" ng-options="value.label for value in sortOptions">
-						    	<option></option>
 						    </select>
 				    	</label>
 				    </div>
 
 				    <div class="small-12 large-6 columns">
 				    	<label>Ascending or Descending
-					        <select ng-model="reverse" ng-init="reverse = false"> 
-					        	<option value="false">Ascending</option>
-					        	<option value="true">Descending</option>
-					        </select>
+					        <select  ng-model="reverseOption" ng-options="value.label for value in reverseOptions">
+						    </select>
 				    	</label>
 				    </div>
 				</div>
 			</form>
 
-		    <div class="row" ng-repeat="movie in movieList | filter : query | orderBy : sortOption.id : reverse">
+		    <div class="row" ng-repeat="movie in movieList | filter : query | orderBy : sortOption.id : reverseOption.id">
 		    	<div class="small-3 columns">
 	    			<img ng-src="../data/images/{{movie.imdbID}}.jpg"/>
 	    		</div>
