--- a/public/partials/details.html
+++ b/public/partials/details.html
@@ -2,7 +2,7 @@
     <div class="row ">
         <div class="small-12 small-centered columns">
 	    	<div class="small-3 columns">
-				<img ng-src="../data/images/{{movie.imdbID}}.jpg"/>
+				<img ng-src="../public/data/images/{{movie.imdbID}}.jpg"/>
 			</div>
 	    	<div class="small-9 columns">
 		    	<span>
