--- a/public/partials/gallery.html
+++ b/public/partials/gallery.html
@@ -27,7 +27,7 @@
 	    <div class="column" ng-repeat="movie in movieList | filter : query | orderBy : 'rank'">
 	    	<span>
 	    		<a href="./#/details/{{movie.imdbID}}">
-	    			<img ng-src="../data/images/{{movie.imdbID}}.jpg"/>
+	    			<img ng-src="../public/data/images/{{movie.imdbID}}.jpg"/>
 	    		</a>
 	    	</span>
 	    </div>
