--- a/public/partials/list.html
+++ b/public/partials/list.html
@@ -30,7 +30,7 @@
 
 		    <div class="row" ng-repeat="movie in movieList | filter : query | orderBy : sortOption.id : reverseOption.id">
 		    	<div class="small-3 columns">
-	    			<img ng-src="../data/images/{{movie.imdbID}}.jpg"/>
+	    			<img ng-src="../public/data/images/{{movie.imdbID}}.jpg"/>
 	    		</div>
 		    	<div class="small-9 columns">
 			    	<span>
